app/assets/stylesheets/application.css
*, *:before, *:after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
  font-family: 'Montserrat', sans-serif;
  font-size: 28px;
  color: #484d56;
}
body {
  font-family: "HelveticaNeue-Light";
  text-align: center;
}
.site-container {
  width: 100%;
  margin: 0;
  padding: 0;
}

nav {
text-align: center;
height: 150px;
border-bottom: 1px solid #EEEDF2;
border-top: 1px solid gray;
padding-bottom: 10px;
padding-top: 10px;
background-color: white;
}

.nav-link {
  text-decoration: none;
  color: #484d56;
  margin: 5%;
  font-size: 35px;
  display: inline-block;
  font-family: 'Open Sans Condensed', sans-serif;
}
.welcome{
  color: white;
}

.nav-link:hover{
  /*text-shadow: 0 0 50px #ED423D;*/
  border-bottom: 5px solid #ED423D
}
@media (min-width: 500px) {
    .site-content {
      width: 80%;
    }
}

@media (min-width: 1000px) {
    .site-content {
      width: 40%;
    }
}
.content {
  margin: 0 auto;
  width: 50%;
  margin-top: 10px;
  padding-top: 45px;
  padding-left: 70px;
  padding-right: 70px;
}
h2 {
  font-size: 40px;
  padding-top: 10px;
  padding-bottom: 10px;
}
h1{
  font-size: 60px;
  padding-top: 10px;
  padding-bottom: 10px;
}
p {
  color: gray;
  padding: 15px;
  font-weight: lighter;
}

a {
  text-decoration: none;
  color: #ED423D;
}

.notice {
  background-color: #ED423D;
  color: white;
  font-size: 35px;
  font-weight: lighter;
}

.timebank {
  font-size: 50px;
  color: white;
  border: 1px #01ADDB;
  background-color: #ED423D
}

.profile {
  height: 400px;
  width: 300px;
  margin: 7px;
}

.profile-name {
  background-color: #ED423D;
  color: white;
  font-size: 35px;
}

.circular {
  display:block;
  margin:2em auto;
  width: 100%;
	width: 300px;
	height: 300px;
	border-radius: 150px;
	-webkit-border-radius: 150px;
	-moz-border-radius: 150px;
	background: url('https://upload.wikimedia.org/wikipedia/en/2/2e/Pat-Morita_(Karate_Kid).jpg') no-repeat;
	}

  .new_service {
    margin: 0 auto;
    width: 50%;
  }

  form{
    display: block;

  }
  input {
    width: 500px;
    height: 50px;
    margin-bottom: 5px;
    display: block;
    margin: 0 auto;
    width: 50%;
    border: none;
    border-bottom: 2px solid #484d56;
  }
  textarea {
    margin: 0px;
    height: 400px;
    width: 500px;
    display: block;
    margin: 0 auto;
    width: 50%;
    border: none;
    border-bottom: 2px solid #484d56;
    resize: none;
  }
  textarea:focus{
    outline: none;
  }

  input[type=submit]{
    background-color: #ED423D;
    background-position: center;
    color: white;
    height: 50px;
    display: block;
    margin: 10px auto;
    width: 50%;
    border:none;
}
  input:focus{
    outline: none;

  }
li {
  list-style-type:none;
  padding: 15px;
}
.logo{
  width: 150px;
  position: fixed;
  display: flex;
  padding-left: 10px;
}

